[tool.poetry]
name = "window-functions"
version = "0.1.0"
description = "Project to run the window functions from sql-fundamentals course at dataquest.io"
authors = ["Atila Santos <atila.romao@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipython-sql = "^0.5.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
